ecmascript/parser/tests/test262-error-references/fail/100c329e6dd70e5a.js.stderr
error: Unterminated block comment
 --> $DIR/tests/test262-parser/fail/100c329e6dd70e5a.js:1:1
  |
1 | /* 
  | ^^^

